...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.unit.dp
import ch.eureka.eurekapp.R
import ch.eureka.eurekapp.ui.designsystem.tokens.EurekaStyles

object TemplateBasicInfoSectionTestTags {
  const val TITLE_INPUT = "template_title_input"
  const val DESCRIPTION_INPUT = "template_description_input"
}

/**
 * Section for editing template basic information.
 *
 * @param title Template title
...
